# brain2gain

./: .dockerignore  .env.admin  .env.dev  .env.domains  .env.example  .env.local  .env.production  .env.store  .gitignore  ANALYTICS_TESTING_STRATEGY.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT_GUIDE.md  DNS_FIX_GUIDE.md  DNS_ISSUE_REPORT.md  DOCKER_SETUP.md  Dockerfile.simple  IMMEDIATE_DNS_FIX_STEPS.md  IMMEDIATE_IMPROVEMENTS.md  INTEGRATION_IMPROVEMENTS_PLAN.md  MIGRATION_STATUS.md  Makefile  Makefile.old  PRIORITY_ACTIONS.md  PRODUCTION_DEPLOYMENT_PLAN.md  PRODUCTION_INFRASTRUCTURE.md  QA_TESTING_STRATEGY.md  README-environments.md  README.md  SECURITY.md  TESTING_COMPREHENSIVE_GUIDE.md  TESTING_GUIDE.md  TESTING_IMPLEMENTATION_REPORT.md  action_plan.yml  audit_report.yaml  audit_report_2025-07-04.md  backend_fixed.py  backend_simple_working.py  backend_startup_fixed.py  (+32 more)
backend/: Dockerfile  Dockerfile.ci  Dockerfile.prod  EMAIL_TEMPLATES.md  PHASE_2_IMPROVEMENTS.md  README.md  TESTING_STATUS_REPORT.md  alembic.ini  entrypoint.sh  main_simple.py  pyproject.toml  requirements-dev.txt  testing_plan.yml  wq
backend/app/: main.py  models.py  stock.py  transaction.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 2024061000_add_performance_indexes.py  2024061001_add_top_products_view.py  2024121200_add_event_store_table.py  2024121201_migrate_sales_order_to_order.py  2024121202_migrate_data_sales_to_orders.py  2024121203_add_payment_refund_tables.py
backend/app/api/: dependencies.py  deps.py  main.py
backend/app/api/routes/: analytics.py  auth.py  cart.py  email_templates.py  events.py  login.py  notifications.py  orders.py  payments.py  products.py  users.py  utils.py  websocket.py
backend/app/api/v1/: products.py  transactions.py
backend/app/core/: cache.py  config.py  database.py  db.py  event_sourcing.py  security.py  websocket.py
backend/app/dashboard/: app.py
backend/app/email-previews/: email_20250630_090846_test_at_brain2gain.com.html  email_20250630_091027_test_at_brain2gain.com.html  email_20250630_091834_integration.test_at_brain2gain.com.html  email_20250630_092604_test_at_brain2gain.com.html  email_20250630_092842_integration.test_at_brain2gain.com.html  email_20250630_095143_integration.test_at_brain2gain.com.html  email_20250630_095547_integration.test_at_brain2gain.com.html  email_20250630_095851_test_at_example.com.html  email_20250630_095852_user1_at_example.com.html  email_20250630_095852_user2_at_example.com.html  email_20250630_095852_user3_at_example.com.html  email_20250630_102454_test_at_example.com.html  email_20250630_102454_user1_at_example.com.html  email_20250630_102454_user2_at_example.com.html  email_20250630_102454_user3_at_example.com.html  email_20250630_102710_test_at_example.com.html  email_20250630_102710_user1_at_example.com.html  email_20250630_102710_user2_at_example.com.html  email_20250630_102710_user3_at_example.com.html  email_20250630_133013_integration.test_at_brain2gain.com.html
backend/app/email-templates/compiled/: order_confirmation_-3810260877148179032.html  order_confirmation_-4855453647174996533.html  order_confirmation_-8635031413213644243.html  order_confirmation_1311482786005127856.html  order_confirmation_2614875982137544374.html  order_confirmation_3214532833922795768.html  order_confirmation_3218301796482477799.html  order_confirmation_3311532970724822690.html  (+19 more)
backend/app/middlewares/: advanced_rate_limiting.py  error_handler.py  exception_handler.py  rate_limiting.py
backend/app/models/: customer.py  enum.py  mixins.py  product.py  role.py  sales.py  stock.py  transaction.py  user.py
backend/app/repositories/: base.py  cart_repository.py  product_repository.py  transaction_repo.py
backend/app/schemas/: __init__.py  cart.py  order.py  payment.py  product.py  role.py  user.py
backend/app/services/: alert_service.py  analytics_service.py  auth_service.py  cart_service.py  cohort_analysis_service.py  conversion_funnel_service.py  customer_segmentation_service.py  email_delivery_service.py  email_template_service.py  event_integration_service.py  inventory_service.py  notification_service.py  order_service.py  payment_gateway.py  payment_service.py  paypal_service.py  product_service.py  report_service.py  shipping_service.py  stripe_service.py  transaction_service.py
backend/app/tests/: database_conftest.py  test_product_service.py
backend/docs/: Makefile
backend/docs/source/: conf.py  index.rst  modules.rst
backend/migrations/: env.py
backend/migrations/versions/: 32a4f7336f57_import_decimal_in_sales_py.py  9da22a6a6941_stock_one_to_one_fix.py  d3a5d3d97a7d_stock_one_to_one_fix.py  e7e19ee8e250_stock_one_to_one_fix2.py
backend/performance_optimizations/: advanced_cache.py  advanced_rate_limiting.py  optimized_database.py  optimized_models.py  scalability_config.py
backend/scripts/: start-prod.sh  test-basic.sh  test-comprehensive.sh  test-performance.sh  test-security.sh
docs/: Makefile  (+5 more)
(+294 files in other folders)
