[tool.poetry]
name = "brain2gain_backend"
version = "0.1.0"
description = "API + Dash para Brain2Gain"
authors = ["Jaziel Flores <jaziel@example.com>"]
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.29" }
asyncpg = "^0.29"
sqlmodel     = "^0.0.8"
SQLAlchemy    = { version = "<2.0.0,>=1.4.0" }
alembic = "^1.13"
pydantic = "^1.10.9"
python-dotenv = "^1.0"
dash = "^2.17"
plotly = "^5.20"
psycopg2-binary = "^2.9"
pandas        = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
httpx  = "^0.27"
ruff   = "^0.4"
